fixed text align left

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -49,7 +49,7 @@
     }
 
     @media (max-width: 1100px) {
-      text-align: center;
+      text-align: left;
       margin-bottom: 40px;
     }
 
