--- a/src/app/contact/contact.scss
+++ b/src/app/contact/contact.scss
@@ -63,6 +63,7 @@
 
       @media (max-width: 1550px) {
         font-size: 80px;
+        text-align: left;
       }
       @media (max-width: 850px) {
         font-size: 60px;
@@ -83,6 +84,7 @@
 
       @media (max-width: 850px) {
         font-size: 24px;
+        text-align: left;
       }
       @media (max-width: 440px) {
         font-size: 20px;
@@ -97,6 +99,7 @@
 
       @media (max-width: 850px) {
         font-size: 18px;
+        text-align: left;
       }
       @media (max-width: 440px) {
         font-size: 16px;
