--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -72,6 +72,7 @@
       padding-bottom: 0;
       flex: 1;
       justify-content: center;
+      align-items: flex-start;
     }
 
     .hero-title {
@@ -89,6 +90,7 @@
 
         @media (max-width: 1550px) {
           font-size: 44px;
+          text-align: left;
         }
 
         @media (max-width: 440px) {
