--- a/src/app/my-work/my-work.scss
+++ b/src/app/my-work/my-work.scss
@@ -48,7 +48,8 @@
 
   .section-header {
     width: 100%;
-    margin-bottom: 80px;
+    max-width: 1331px;
+    margin: 0 auto 80px;
     display: flex;
     align-items: center;
 
@@ -57,6 +58,7 @@
       align-items: flex-start;
       gap: 24px;
       margin-bottom: 20px;
+      max-width: 588px;
     }
 
     .section-title {
