--- a/src/app/skills/skills.scss
+++ b/src/app/skills/skills.scss
@@ -56,6 +56,7 @@
         @media (max-width: 1190px) {
           text-align: center;
           margin: 0 auto 24px;
+          text-align: left;
         }
 
         @media (max-width: 850px) {
